--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4",
-    "angular-cli": "1.0.0-beta.28.3",
+    "angular-cli": "1.0.0-beta.28.3"
   },
   "devDependencies": {
     "@angular/cli": "1.1.2",
