--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
-    "angular-cli": "1.0.0-beta.28.3"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.1.2",
