--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "e2e": "ng e2e"
 
   },
+  "engines": {
+  "node": "6.9.2",
+  "npm": "3.10.9"
+},
   "private": true,
   "dependencies": {
-    "angular-cli": "1.0.0-beta.28.3",
+    "@angular/compiler-cli": "2.2.3",
+  "angular-cli": "1.0.0-beta.22-1",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
