--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "@angular/compiler-cli":"^2.3.1",
-    "angular-cli": "1.0.0-beta.22-1",
+    "@angular/cli": "1.0.0-rc.2",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
