--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "e2e": "ng e2e"
   },
   "engines": {
-    "node": "6.9.2",
+    "node": "6.10.1",
     "npm": "3.10.9"
   },
   "private": true,
   "dependencies": {
-    "@angular/compiler-cli":"^2.3.1",
-    "@angular/cli": "1.0.0-rc.2",
+    "@angular/compiler-cli":"4.3.1",
+    "@angular/cli": "1.1.2",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
